--- a/GOES-intro.ipynb
+++ b/GOES-intro.ipynb
@@ -267,7 +267,7 @@
     "\n",
     "The normalized difference vegetation index (NDVI) is a common indicator of healthy green vegetation. \n",
     "$$NDVI = \\frac{NIR - Red}{NIR + Red}$$\n",
-    "For ABI, use band3 for NIR and band2 for Red. NDVI is relatively insensitive to the solar elevation angle and satellite viewing angle, unlike the intensities or reflectance of individual bands. NDVI values are generally negative for water and snow, 0-0.2 for bare soil, urban, or sparse vegtation, and 0.3-1 for vegetation.\n",
+    "For ABI, use band3 for NIR and band2 for Red. NDVI is relatively insensitive to the solar elevation angle and satellite viewing angle, unlike the intensities or reflectance of individual bands. NDVI values are generally negative for water, snow and clouds; 0-0.2 for bare soil, urban areas, and sparse vegtation; and 0.3-1 for vegetation, with higher values indicating denser foliage.\n",
     "\n",
     "Look back at the image of vegetation reflectance above and talk with someone next to you about why NDVI can discriminate between vegetation, soil, and water.\n",
     "\n",
