Fix suggested conda command

--- a/GOES-intro.ipynb
+++ b/GOES-intro.ipynb
@@ -8,8 +8,8 @@
     "The fsu-s23 Python kernel on jetstream-cloud.org has already installed all of the packages that you will need for this Notebook.\n",
     "If you are running this Notebook on your personal computer, you may need to install the following packages. For Anaconda Python (and other conda-based distributions), use the following commands.\n",
     "```\n",
-    "conda install xarray pandas cartopy hvplot netCDF4 h5netcdf h5pyd s3fs\n",
-    "conda install -c conda-forge metpy\n",
+    "conda install xarray pandas cartopy hvplot netCDF4 s3fs\n",
+    "conda install -c conda-forge h5netcdf h5pyd metpy\n",
     "```\n",
     "You should only need to install these once."
    ]
