Update cloud NDVI comments

--- a/GOES-intro.ipynb
+++ b/GOES-intro.ipynb
@@ -304,7 +304,7 @@
    "source": [
     "## Cloud masking ##\n",
     "\n",
-    "NDVI is intended for analysis of surface characteristics, but your NDVI figure should show that clouds have very high NDVI, even higher than green vegetation. Next, we will mask out the cloud areas, so that NDVI is shown only for surface areas."
+    "NDVI is intended for analysis of surface characteristics. Clouds have low or negative NDVI and it can be difficult to distinguish clouds from bare or snow-covered ground using NDVI alone. Next, we will mask out the cloud areas, so that NDVI is shown only for surface areas."
    ]
   },
   {
