Add goals statement

--- a/GOES-intro.ipynb
+++ b/GOES-intro.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e0e7f0a2",
+   "metadata": {},
+   "source": [
+    "## GOES introduction ##\n",
+    "In this exercise, you will \n",
+    "* Obtain GOES ABI data from a NOAA repository on AWS\n",
+    "* Examine the contents of a GOES data file\n",
+    "* Display GOES reflectance data\n",
+    "* Create true-color images from reflectance\n",
+    "* Construct and interpret NDVI\n",
+    "* Use a cloud mask to isolate cloudy and cloud-free parts of the ABI images"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5364e184-eaa2-46d9-954a-69d97b169ed8",
    "metadata": {},
