Highlight products to turn in

--- a/ex2-GOES-radiance-temperature.ipynb
+++ b/ex2-GOES-radiance-temperature.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "47f9e83f-3c67-4da1-a933-1fdeee8b041d",
    "metadata": {
@@ -11,7 +12,11 @@
     "In this exercise, you will  \n",
     "* use radiance measurements to compute brightness temperature\n",
     "* perform graphical and statistical comparison of your brightness temperature to the official brightness values\n",
-    "* estimate surface temeprature from radiance \n"
+    "* estimate surface temeprature from radiance \n",
+    "\n",
+    "Locations where you need to add or modify code are marked ```#***```.\n",
+    "\n",
+    "Figures and information that you should turn in with your homework are marked ```#!!!```"
    ]
   },
   {
@@ -117,7 +122,7 @@
     "    -------\n",
     "    Radiance, W/m2/sr/m\n",
     "    '''\n",
-    "    return ########### Enter Planck's function here\n",
+    "    return #*** Enter Planck's function here \n",
     "\n",
     "# Define Brightness temperature as a function of intensity (W/m2/m/sr)\n",
     "def BT(I,lam):\n",
@@ -131,7 +136,7 @@
     "    -------\n",
     "    Brightness temperature, K\n",
     "    '''\n",
-    "    return ########### Enter Planck's function here"
+    "    return #*** Enter Planck's function here"
    ]
   },
   {
@@ -256,7 +261,9 @@
    },
    "outputs": [],
    "source": [
-    "# Write a command to display your brightness temperature\n"
+    "#*** Write a command to display your brightness temperature\n",
+    "\n",
+    "#!!! Turn in your figure\n"
    ]
   },
   {
@@ -291,7 +298,7 @@
     "print( 'Reading file: https://{:s}.s3.amazonaws.com/{:s}'.format( *BT_fileinfo.file[0].split('/',1) ) )\n",
     "                                          \n",
     "# Load the data from AWS\n",
-    "goes_BT = xr.open_dataset( fs.open( BT_fileinfo.file[0] ) )\n"
+    "goes_BT = xr.open_dataset( fs.open( BT_fileinfo.file[0] ) )"
    ]
   },
   {
@@ -321,8 +328,9 @@
    },
    "outputs": [],
    "source": [
-    "# Plot the brightness temperature. This should look indistinguishable from your values if everything is done correctly\n",
-    "goes_BT['CMI_C13'].plot.imshow()"
+    "#*** Plot the brightness temperature for the same ABI channel as you used to calculate your brightness temperature. \n",
+    "# As a reminder from exercise 1, the brightness temperature variables are named 'CMI_Cxx' where xx is the ABI channel.\n",
+    "# This should look indistinguishable from your values if everything is done correctly\n"
    ]
   },
   {
@@ -332,7 +340,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the difference between between your brightness temperature and the official one from the GOES team. \n"
+    "#*** Plot the difference between between your brightness temperature and the official one from the GOES team.  \n",
+    "# The differences should be less than 1 K.\n",
+    "\n",
+    "#!!! Turn in your map of the differences"
    ]
   },
   {
@@ -344,11 +355,13 @@
    },
    "outputs": [],
    "source": [
-    "# Compute the mean difference between your brightness temperature and the official one\n",
+    "#*** Compute the mean difference between your brightness temperature and the official one\n",
     "\n",
-    "# Compute the root-mean-square (rms) difference between your brightness temperature and the official one\n",
+    "#*** Compute the root-mean-square (rms) difference between your brightness temperature and the official one\n",
     "\n",
-    "# Both of these differences should be less than 1 K. \n"
+    "# Both of these differences should be less than 1 K. \n",
+    "\n",
+    "#!!! Turn in your values for mean and rms difference."
    ]
   },
   {
@@ -381,7 +394,7 @@
     "print( 'Reading file: https://{:s}.s3.amazonaws.com/{:s}'.format( *LST_fileinfo.file[0].split('/',1) ) )\n",
     "                                          \n",
     "# Load the data from AWS\n",
-    "goes_LST = xr.open_dataset( fs.open( LST_fileinfo.file[0] ) )\n"
+    "goes_LST = xr.open_dataset( fs.open( LST_fileinfo.file[0] ) )"
    ]
   },
   {
@@ -393,7 +406,7 @@
    },
    "outputs": [],
    "source": [
-    "# Display the Land Surface temperature\n"
+    "#*** Display the Land Surface temperature\n"
    ]
   },
   {
@@ -403,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display the difference between the official LST product and your brightness temperature.\n",
+    "#*** Display the difference between the official LST product and your brightness temperature.\n",
     "# You should find that they are not the same. Which one is warmer and why?\n"
    ]
   },
@@ -416,12 +429,15 @@
    },
    "outputs": [],
    "source": [
-    "# Try to make your own estimate of LST by accounting for the emissivity of land surfaces. \n",
+    "#*** Try to make your own estimate of LST by accounting for the emissivity of land surfaces. \n",
     "# Test different reasonable values of emissivity to see how close of a match you can make to the official product\n",
     "goes['my_LST'] = \n",
     "\n",
     "\n",
-    "# You will find that there is no value of emissivity that provides a good match to the official LST product. Why is this? Which values \n"
+    "# You will find that there is no value of emissivity that provides a good match to the official LST product everywhere.  \n",
+    "\n",
+    "#!!! Turn in your best map of land surface temperature. Explain how you created it and answer these questions:\n",
+    "# Why isn't there an emissivity value that provides a good estimate of LST everywhere? Which emissivity values give a reasonable estimate in which locations?"
    ]
   }
  ],
