--- a/ex2-GOES-radiance-temperature.ipynb
+++ b/ex2-GOES-radiance-temperature.ipynb
@@ -143,7 +143,7 @@
     "    -------\n",
     "    Brightness temperature, K\n",
     "    '''\n",
-    "    return #*** Enter Planck's function here"
+    "    return #*** Enter brightness temperature function here"
    ]
   },
   {
