Note on ABI spectral response function

--- a/ex2-GOES-radiance-temperature.ipynb
+++ b/ex2-GOES-radiance-temperature.ipynb
@@ -367,7 +367,11 @@
    "outputs": [],
    "source": [
     "#*** Plot the difference between between your brightness temperature and the official one from the GOES team.  \n",
-    "# The differences should be less than 1 K.\n",
+    "# The difference should be less than 1 k.\n",
+    "\n",
+    "\n",
+    "# The two will not be exactly the same because the official brightness temperture data account for the small range of wavelengths \n",
+    "# that are measured by each channel (spectral response function), whereas we assumed a monochromatic intensity.\n",
     "\n",
     "#!!! Turn in your map of the differences"
    ]
